# Task2_sys.prog_Presniakov_IO-21

./: README.md  build.ninja
rep/include/: calculator.h
rep/src/: main.cpp
secondTask/: CMakeLists.txt  Makefile
secondTask/built/: CMakeCache.txt  cmake_install.cmake  secondTask
